artifacts/apps/flagr/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: flagr
spec:
  redirectScheme:
    scheme: https
    permanent: true
