artifacts/apps/flagr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flagr
  name: flagr
  labels:
    app: flagr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flagr
  template:
    metadata:
      labels:
        app: flagr
    spec:
      containers:
      - name: flagr
        image: ghcr.io/openflagr/flagr:latest
        ports:
        - containerPort: 18000
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: 18000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: 18000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  namespace: flagr
  name: flagr
  labels:
    app: flagr
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "18000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
  - port: 18000
    targetPort: 18000
    protocol: TCP
    name: http
  selector:
    app: flagr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: flagr
  name: flagr
  labels:
    app: flagr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: flagr-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: flagr.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: flagr
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
